.stack-work/logs/stm-2.4.5.1.log
Configuring stm-2.4.5.1...
Preprocessing library for stm-2.4.5.1..
Building library for stm-2.4.5.1..
[ 1 of 10] Compiling Control.Concurrent.STM.TBQueue ( Control/Concurrent/STM/TBQueue.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TBQueue.o )
[ 2 of 10] Compiling Control.Concurrent.STM.TChan ( Control/Concurrent/STM/TChan.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TChan.o )
[ 3 of 10] Compiling Control.Concurrent.STM.TMVar ( Control/Concurrent/STM/TMVar.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TMVar.o )
[ 4 of 10] Compiling Control.Concurrent.STM.TQueue ( Control/Concurrent/STM/TQueue.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TQueue.o )
[ 5 of 10] Compiling Control.Concurrent.STM.TVar ( Control/Concurrent/STM/TVar.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TVar.o )
[ 6 of 10] Compiling Control.Concurrent.STM.TArray ( Control/Concurrent/STM/TArray.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Concurrent/STM/TArray.o )
[ 7 of 10] Compiling Control.Monad.STM ( Control/Monad/STM.hs, .stack-work/dist/x86_64-osx/Cabal-2.4.0.1/build/Control/Monad/STM.o )

[;1mControl/Monad/STM.hs:34:9: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Not in scope: ‘always’[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m34 |[0m[0m         [;1m[31malways[0m[0m,
[;1m[34m   |[0m[0m[;1m[31m         ^^^^^^[0m[0m
[0m[0m[0m
[;1mControl/Monad/STM.hs:35:9: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Not in scope: ‘alwaysSucceeds’[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m35 |[0m[0m         [;1m[31malwaysSucceeds[0m[0m,
[;1m[34m   |[0m[0m[;1m[31m         ^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m